# travelwise-lite

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Makefile  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.claude/: settings.json
.claude/agents/: constitution-reviewer.md  general-reviewer.md  review-auditor.md
.claude/skills/iterationClose/: SKILL.md
.claude/skills/iterationStart/: SKILL.md
docs/iterations/: README.md
docs/iterations/00/: demo.md  explainer.md  learnings.md
docs/iterations/01/: demo.md  explainer.md  learnings.md
specs/00/: spec.md
specs/01/: spec.md
spike/: server.py
spike/caller/: agent.py
spike/remote_hello/: agent.py
supplier/: __init__.py  agent.py  merge.py  schemas.py  tools.py
tests/: conftest.py  test_smoke.py  test_supplier.py
